force-app/main/default/objects/CB_Invoice__c/CB_Invoice__c.object-meta.xml
<CustomObject>
    <label>CB Invoice</label>
    <nameField>
        <label>CB Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>