force-app/main/default/objects/CB_Invoice__c/fields/CB_Id__c.field-meta.xml
<CustomField>
    <fullName>CB_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Chargebee Invoice id</description>
    <externalId>true</externalId>
    <label>CB Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>