force-app/main/default/objects/CB_Invoice__c/fields/Chargebee_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>Chargebee_Modified_Time__c</fullName>
    <description>Chargebee Modified Time</description>
    <label>Chargebee Modified Time</label>
    <type>DateTime</type>
</CustomField>