force-app/main/default/objects/CB_Invoice__c/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Reference</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CB Invoices</relationshipLabel>
    <relationshipName>CB_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>