force-app/main/default/objects/CB_Invoice__c/fields/InvoiceID__c.field-meta.xml
<CustomField>
    <fullName>InvoiceID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>CB Invoice Id</description>
    <externalId>true</externalId>
    <label>Invoice ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>