force-app/main/default/objects/CB_Invoice__c/fields/Next_Retry__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry__c</fullName>
    <description>Invoice payment Next Retry</description>
    <label>Next Retry</label>
    <type>DateTime</type>
</CustomField>