force-app/main/default/objects/CB_Invoice__c/fields/Paid_On__c.field-meta.xml
<CustomField>
    <fullName>Paid_On__c</fullName>
    <description>Invoice Paid On</description>
    <label>Paid On</label>
    <type>DateTime</type>
</CustomField>