force-app/main/default/objects/CB_Invoice__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoice Recurring</description>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>