force-app/main/default/objects/CB_Invoice__c/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Subscription Id</description>
    <label>CB Subscription</label>
    <referenceTo>CB_Subscription__c</referenceTo>
    <relationshipLabel>CB Invoices</relationshipLabel>
    <relationshipName>CB_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>