force-app/main/default/objects/CB_Invoice__c/fields/SubTotal__c.field-meta.xml
<CustomField>
    <fullName>SubTotal__c</fullName>
    <description>Invoice SubTotal</description>
    <label>SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>